[package]
name = "gltf"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "=1.0.203", features = [ "derive" ] }
serde_repr = "0.1.19"
serde_json = { version = "1.0.117", features = ["raw_value"] }
serde_with = { version = "=3.8.1", features = ["macros"] }
base64 = "=0.22.1"
glam = { version = "=0.27.0", features = [ "serde" ] }

[dev-dependencies]
gsparser = { git = "https://github.com/robmikh/goldsrc-asset-viewer" }
id_tree = "1.8.0"
image = "0.25.1"
